<resources>
    <string name="preference_key">edu.uw.ischool.opensecrets.PREFERENCE_FILE_KEY</string>
    <string name="app_name">Open Secrets</string>
    <string name="home">Home</string>
    <string name="add">Add</string>
    <string name="search">Search</string>
    <string name="option">Option</string>
    <string name="search_page_desc">Search page</string>
    <string name="add_page_desc">Add a new journal page</string>
    <string name="option_page_desc">Option page</string>
    <string name="home_page_desc">Home page</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="sign_up"><u>Sign Up</u></string>
    <string name="login">Login</string>
    <string name="check_password">Passwords are not the same. Make sure you entered your password correctly.</string>
    <string name="username_taken">Username taken.</string>
    <string name="login_failed">Incorrect username or password.</string>
    <string name="title">Journal Title</string>
    <string name="secondary_text">This is will be the body text\n</string>
    <string name="entry_item_color">the color of the entry</string>
    <string name="date_text">12–12–2000</string>
    <string name="no_entry_yet">No entry yet…</string>
    <string name="saved_option">Option Saved.</string>
    <string name="save">Save</string>
    <string name="minimum_time">Minimum Time</string>
    <string name="journal">Journal</string>
    <string name="next">Next</string>
    <string name="secret">Secret…</string>
    <string name="open_secret">Open Secret</string>
    <string name="search_button_desc">search page navigation button</string>
    <string name="option_page_navigation_button">option page navigation button</string>
    <string name="home_button_desc">home page navigation button</string>
    <string name="add_button_desc">add journal page navigation button</string>
    <string name="entry_title">Entry Title</string>
    <string name="title_hint">Title…</string>
    <string name="color_hint">Color</string>
    <string name="save_entry">Save Entry</string>
    <string name="update_entry">Update Entry</string>
    <string name="a_number">a number</string>
    <string name="_1l">1L</string>
    <string name="backing_up_journal">Backing up journal</string>
    <string name="backup_success">Backup sucessful</string>
    <string name="backup_fail">Unable to complete backup</string>
    <string-array name="color_array">
        <item>red</item>
        <item>blue</item>
        <item>green</item>
        <item>purple</item>
        <item>orange</item>
        <item>yellow</item>
    </string-array>
    <string-array name="sort_array">
        <item>Title</item>
        <item>dateCreated</item>
    </string-array>
    <string-array name="filter_array">
        <item>Title</item>
        <item>Text</item>
        <item>Color</item>
    </string-array>
    <string-array name="ascend_array">
        <item>Ascending</item>
        <item>Descending</item>
    </string-array>
</resources>