<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:contentDescription="@string/home_page_desc"
        android:enabled="true"
        android:icon="@drawable/round_home_24"
        android:title="@string/home" />

    <item
        android:id="@+id/add"
        android:contentDescription="@string/add_page_desc"
        android:enabled="true"
        android:icon="@drawable/round_add_24"
        android:title="@string/add" />

    <item
        android:id="@+id/search"
        android:contentDescription="@string/search_page_desc"
        android:enabled="true"
        android:icon="@drawable/round_search_24"
        android:title="@string/search" />
    <item
        android:id="@+id/option"
        android:contentDescription="@string/option_page_desc"
        android:enabled="true"
        android:icon="@drawable/round_settings_24"
        android:title="@string/option" />
</menu>